<resources>
    <string name="app_name">Tanulói Enapló</string>
    <string name="prompt_username">Felhasználónév</string>
    <string name="prompt_password">Jelszó</string>
    <string name="action_sign_in">Bejelentkezés</string>
    <string name="student_login">Tanulói bejelentkezés</string>
    <string name="username_hint">11 jegyű oktatási azonosító</string>
    <string name="password_hint">4 jegyű számkód</string>
    <string name="icon_description">logo</string>
    <string name="grades">Jegyek</string>
    <string name="absences">Hiányzások</string>
    <string name="back_arrow">&lt;-</string>
    <string name="canteen">Menza</string>
    <string name="right_arrow">-&gt;</string>
    <string name="logout">Kijelentkezés</string>
    <string name="messages">Üzenetek</string>
    <string name="late">Késések</string>
    <string name="admonitory">Figyelmeztetések</string>
    <string name="propitious">Dicséretek</string>
    <string name="myClass">Osztályom</string>
    <string name="no_data_today">Nem található adat erre a napra.</string>
    <string name="no_data">Nem található adat.</string>
    <string name="pending">Függőben</string>
    <string name="authorized_absence">Igazolt</string>
    <string name="school_interest_absence">Iskolai érdekből igazolt</string>
    <string name="unauthorized_interest">Igazolatlan</string>
    <string name="timetable">Órarend</string>
    <string name="exams">Dolgozatok</string>
    <string name="seven">Hetes:</string>
    <string name="subHeadTeacher">Osztályfőnök helyettes:</string>
    <string name="headTeacher">Osztályfőnök:</string>
    <string name="className">Osztály:</string>
    <string name="first_semester_name">I. félév</string>
    <string name="second_semester_name">II. félév</string>
    <string name="loggedInAs">Bejelentkezve:</string>
    <string name="open">Nyit</string>
    <string name="close">Zár</string>
</resources>