<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.App"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primer_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textName"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/className" />

        <TextView
            android:id="@+id/name"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12.A"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textHeaderTeacher"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headTeacher" />

        <TextView
            android:id="@+id/headerTeacher"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horváth Jenő"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSubHeaderTeacher"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subHeadTeacher" />

        <TextView
            android:id="@+id/subHeaderTeacher"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Polgár Jenő"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSeven1"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven" />

        <TextView
            android:id="@+id/seven1"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kiss Gizella"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textSeven2"
            android:layout_width="wrap_content"
            android:textColor="@color/seconder_content"
            android:layout_height="wrap_content"
            android:text="@string/seven" />

        <TextView
            android:id="@+id/seven2"
            android:textColor="@color/seconder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Kovács Bendegúz" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        android:theme="@style/ProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />



    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textColor="@color/seconder_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>